Bug 1585874: Clear GC pointers in ScriptSource when canonical ScriptSourceObject is finalized r=tcampbell

Differential Revision: https://phabricator.services.mozilla.com/D48219

--HG--
extra : moz-landing-system : lando